[tool.poetry]
name = "discover-aces-dev"
version = "1.0.0"
description = "aces-dev discovery package."
authors = [ "Colour Developers <colour-developers@colour-science.org>" ]
maintainers = [ "Colour Developers <colour-developers@colour-science.org>" ]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
rich = { version = "*" }

flake8 = { version = "*", optional = true }  # Development dependency.
invoke = { version = "*", optional = true }  # Development dependency.
networkx = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }  # Development dependency.
pygraphviz = { version = "*", optional = true }
yapf = { version = "0.23", optional = true }  # Development dependency.

[tool.poetry.dev-dependencies]
flake8 = "*"
invoke = "*"
pre-commit = "*"
yapf = "0.23"

[tool.poetry.extras]
development = [
    "flake8",
    "invoke",
    "pre-commit",
    "yapf"
]
graphviz = [ "pygraphviz" ]
optional = [ "networkx" ]

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
